# ariac

./: README.md
ariac_kandidat/: CMakeLists.txt  package.xml
ariac_kandidat/Launch/: Launch.py
ariac_kandidat/ariac_kandidat/: competition_interface.py  example.py
ariac_kandidat/config/: sensors.yaml
ariac_kandidat/launch/: launch.py
ariac_kandidat/scripts/: ccs_node.py  competition_script.py  example_node.py
